updated index.html content

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <div class="photo-column">
         <img src="Images/ashley2.jpeg" alt="Ashley">
-        <img src="Images/" alt="Ashley">
+        <img src="Images/Ashley3.jpeg" alt="Ashley">
         <img src="Images/ashley4.jpeg" alt="Ashley">
         <img src="Images/Ashley6.jpeg" alt="Ashley">
       </div>
